--- a/src/components/menu/menu.module.scss
+++ b/src/components/menu/menu.module.scss
@@ -15,7 +15,7 @@
   
       display: flex;
       justify-content: space-between;
-      gap: 14px;
+      gap: 30px;
   
       font-size: 20px;
       line-height: 24px;
@@ -38,13 +38,15 @@
       }
   
       li {
+        position: relative;
+        top: 3px;
         cursor: pointer;
         padding-bottom: 5px;
       }
   
       li.selected {
         font-weight: 700;
-        border-bottom-width: 1px;
+        border-bottom-width: 2px;
         border-bottom-style: solid;
       }
 
