--- a/src/containers/header/header.module.scss
+++ b/src/containers/header/header.module.scss
@@ -1,3 +1,18 @@
 .header {
-  color: inherit;
+
+  padding: 30px 112px;
+  height: 125px;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  :global {
+    .right {
+      display: flex;
+      align-items: center;
+      gap: 22px;
+    }
+  }
+
 }
