--- a/src/components/short-text/short-text.module.scss
+++ b/src/components/short-text/short-text.module.scss
@@ -1,3 +1,6 @@
+@import "../../styles/theme-variable.scss";
+@import "../../styles/theme-mixin.scss";
+
 .textContainer {
   
   width: fit-content;
@@ -15,13 +18,7 @@
       line-height: 24px;
       font-weight: 600;
 
-      &.light {
-        color: #1a1a1a;
-      }
-
-      &.dark {
-        color: #ffffff;
-      }
+      @include color($color-default);
 
     }
 
